renamed:    home.css -> home/home.css 	renamed:    home.html -> home/home.html 	new file:   index.html 	new file:   instance/messages.db 	deleted:    login/login.css 	modified:   login/login.html 	new file:   login/server.js 	new file:   login/signup.html 	new file:   login/users.json 	modified:   main.py

--- a/login/login.html
+++ b/login/login.html
@@ -2,15 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="login" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+        form { display: inline-block; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
+        input { display: block; margin: 10px auto; padding: 10px; width: 80%; }
+        button { padding: 10px 20px; cursor: pointer; }
+    </style>
 </head>
 <body>
-    <p>login</p>
-    <form action="/submit" method="post">
-        <input type="text" name="username" placeholder="username">
-        <input type="password" name="password" placeholder="password">
-        <input type="submit" value="Login">
+    <h2>Login</h2>
+    <form onsubmit="return loginUser(event)">
+        <input type="text" id="username" placeholder="Username" required>
+        <input type="password" id="password" placeholder="Password" required>
+        <button type="submit">Login</button>
     </form>
+    <p id="error-message" style="color: red;"></p>
+
+    <script>
+        async function loginUser(event) {
+            event.preventDefault();
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            const response = await fetch("/login", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ username, password })
+            });
+
+            const data = await response.json();
+            if (data.success) {
+                window.location.href = "index.html"; // Redirect on success
+            } else {
+                document.getElementById("error-message").innerText = "Invalid credentials!";
+            }
+        }
+    </script>
 </body>
 </html>
